# practice

./: pyproject.toml
data/: users.py
practice/model/: app.py  controls.py
practice/model/ui/controls/: buttons.py  checkboxes.py  datepickers.py  dropdowns.py  files.py  radiobuttons.py  tables.py  tags_inputs.py  text_fields.py  upload_a_pictures.py
practice/model/ui/pages/: demoqa_practice_form.py  demoqa_textbox.py  registration_form.py
practice/utils/: utils.py
tests/: conftest.py  test_practice.py
utils/: utils.py
