[tool.poetry]
name = "practice"
version = "0.1.0"
description = ""
authors = ["Aleksei <trrskv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selene = "2.0.0b16"
pytest = "^7.2.1"


[tool.poetry.group.dev.dependencies]
pylint = "^2.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
